// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateMeMutation does not update the icon when source url is not from s3 1`] = `
{
  "updateMyUserProfile": {
    "me": {
      "name": "andy-warhol",
    },
    "user": {
      "name": "andy-warhol",
      "phone": "1234890",
    },
    "userOrError": {
      "user": {
        "internalID": "106",
      },
    },
  },
}
`;

exports[`UpdateMeMutation updates the user profile and returns its new data payload 1`] = `
{
  "updateMyUserProfile": {
    "me": {
      "name": "andy-warhol",
    },
    "user": {
      "location": {
        "address": "123 my street",
        "city": null,
      },
      "name": "andy-warhol",
      "phone": "1234890",
      "priceRange": "-1:1000000000000",
      "receiveLotOpeningSoonNotification": false,
      "receiveNewSalesNotification": false,
      "receiveNewWorksNotification": true,
      "receiveOrderNotification": false,
      "receiveOutbidNotification": false,
      "receivePartnerOfferNotification": true,
      "receivePartnerShowNotification": true,
      "receivePromotionNotification": false,
      "receivePurchaseNotification": false,
      "receiveSaleOpeningClosingNotification": false,
      "receiveViewingRoomNotification": true,
    },
    "userOrError": {
      "user": {
        "internalID": "106",
      },
    },
  },
}
`;
